the minor bug on the image of prodcut not fitting properly is done

--- a/main.css
+++ b/main.css
@@ -40,8 +40,9 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     border-radius: 15px;
-    padding: 10px;
+    padding: 20px;
     cursor: pointer;
 }
 
@@ -51,12 +52,14 @@ main{
 }
 
 .product-image{
+    height: 90%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .product-image img{
-    width: 90%;
+    max-width: 60%;
 }
 
 .product-disc{
